prod/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wscs-api
  namespace: wscs
  labels:
    app: wscs-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wscs-api
  template:
    metadata:
      labels:
        app: wscs-api
    spec:
      imagePullSecrets:
        - name: github-registry
      containers:
        - name: wscs-api
          image: ghcr.io/ptrrr/wscs-api@sha256:1349da4c36ed48a14b1e3e9dda37b84023b9fe22ecdd636d07226db52bab790c
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 800m
              memory: 1.5Gi
            requests:
              cpu: 400m
              memory: 800Mi
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: wscs-api-service
  namespace: wscs
  labels:
    app: wscs-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: wscs-api
