prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: wscs
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/custom-response-headers: |
      Strict-Transport-Security: max-age=31536000; includeSubDomains
      X-Frame-Options: DENY
      X-Content-Type-Options: nosniff
spec:
  tls:
    - hosts:
        - dns.ptrrr.space
      secretName: wscs-tls-cert
  rules:
    - host: dns.ptrrr.space
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: wscs-api-service
                port:
                  number: 80
          - path: /_next/webpack-hmr
            pathType: Prefix
            backend:
              service:
                name: wscs-api-service
                port:
                  number: 80
          - path: /_next
            pathType: Prefix
            backend:
              service:
                name: wscs-api-service
                port:
                  number: 80
          - path: /__nextjs_original-stack-frame
            pathType: Prefix
            backend:
              service:
                name: wscs-api-service
                port:
                  number: 80
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: wscs-api-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wscs-app-service
                port:
                  number: 80
    - host: ptrrr.space
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: wscs-api-service
                port:
                  number: 80
          - path: /_next/webpack-hmr
            pathType: Prefix
            backend:
              service:
                name: wscs-api-service
                port:
                  number: 80
          - path: /_next
            pathType: Prefix
            backend:
              service:
                name: wscs-api-service
                port:
                  number: 80
          - path: /__nextjs_original-stack-frame
            pathType: Prefix
            backend:
              service:
                name: wscs-api-service
                port:
                  number: 80
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: wscs-api-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wscs-app-service
                port:
                  number: 80
    - host: wscs.vpr-group.ch
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: wscs-api-service
                port:
                  number: 80
          - path: /_next/webpack-hmr
            pathType: Prefix
            backend:
              service:
                name: wscs-api-service
                port:
                  number: 80
          - path: /_next
            pathType: Prefix
            backend:
              service:
                name: wscs-api-service
                port:
                  number: 80
          - path: /__nextjs_original-stack-frame
            pathType: Prefix
            backend:
              service:
                name: wscs-api-service
                port:
                  number: 80
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: wscs-api-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wscs-app-service
                port:
                  number: 80
